syntax = "proto3";


service ProductService{
    rpc AddProduct(Productps) returns (TransactionResponse) {}
    rpc DeleteProduct(Productps) returns (TransactionResponse) {}
}

service InventoryService {
    rpc GetInventory(Request) returns (Inventory){}
    rpc GetLastIdd(Request) returns (LastIdd){}
    rpc addProducts(product) returns (TransactionResponse) {}
}

service ReplicationService {
    rpc Requests(Queueitems) returns (TransactionResponse){}
    rpc UpdateData(Lists) returns (Request){}
}

message Lists{
    string queue = 1;
    string users = 2;
}

message Productps{
    string id_product = 1;
    string name = 2;
    string userName = 3;
}

message TransactionResponse{
    int32 status_code = 1;
}

message ProductList{
    repeated int32 product_ids = 1;
}


message Inventory{
    string Inv = 1;
}

message Request{
}

message LastIdd{
    string LIdd = 1;
}

message product {
    string id = 3;
    string name = 4;
  }


message Queueitems {
    int32 method = 1;
    string password = 2;
    string user = 3;
    string variables = 4;
  }